# openapi/openapi.yaml
@@ -9,12 +9,12 @@ paths:
       tags:
         - tasks
       parameters:
-          - name: id
-            in: path
-            required: true
-            schema:
-              type: integer
-              format: uint
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
       requestBody:
         description: the task to update
         required: true
@@ -43,7 +43,6 @@ paths:
       responses:
         '204':
           description: Successfully delete task
-
   /tasks:
     get:
       summary: Get all tasks
@@ -76,19 +75,105 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
-                
-                
+  /users/{id}:
+    patch:
+      summary: patch user
+      operationId: PatchUserByID
+      tags:
+        - users
+      parameters:
+          - name: id
+            in: path
+            required: true
+            schema:
+              type: integer
+              format: uint
+      requestBody:
+        description: the user to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: Updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    delete:
+      summary: delete user
+      operationId: DeleteUserByID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: Successfully deleted user
+
+  /users:
+    get:
+      summary: Get all users
+      operationId: GetUsers
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      operationId: PostUser
+      tags:
+        - users
+      requestBody:
+        description: User to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+
 
 components:
   schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
+
     Task:
       type: object
       properties:
         id:
           type: integer
-          format: uint # так как в БД айди это только положительные числа.
+          format: uint
         task:
           type: string
         is_done:
           type: boolean
-          
